Add fadeIn-fadeOut between photos

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -130,7 +130,21 @@ btn-img-fav {
 .mainImageDiv {
   height: 100%;
   width: 100%;
-  position: relative;
+  top: 5px;
+  left: 10px; 
+  position: absolute;
+  animation-duration: 0.3s
+}
+
+.mainImage {
+  width: auto; 
+  height: auto; 
+  max-height: calc(100% - 10px); 
+  max-width: 100%;
+  /* position: absolute; */
+  top: 10px;
+  animation-duration: 3.5s;
+ 
 }
 
 .flexContainerItem {
@@ -192,16 +206,7 @@ btn-img-fav {
   right: auto;
 }
 
-.mainImage {
-  width: auto; 
-  height: auto; 
-  max-height: calc(100% - 10px); 
-  max-width: 100%;
-  /* position: absolute; */
-  top: 10px;
-  animation-duration: 3.5s;
- 
-}
+
 
 .bg-dark {
   background-color: var(--main) !important;
