--- a/src/css/index.css
+++ b/src/css/index.css
@@ -99,9 +99,9 @@ btn-img-fav {
 
 .btn-fullscreen:before {
   position: absolute;
-  bottom: 5%;
+  bottom: 110px;
   background-size: 40px auto;
-  right: 5%;
+  right: 100px;
   background-image : url(../images/fullscreen.png);
 }
 
@@ -127,22 +127,39 @@ btn-img-fav {
   align-items: center; 
 }
 
+#divBrowswerTop {
+  height: calc(100% - 80px);
+  max-height: calc(100% - 80px);
+  max-width: 100%;
+}
+
+#photoLoaders {
+  height: calc(100% - 90px);
+  position: "absolute"; 
+  width: 100%;
+  min-height: 200px; 
+  max-width: 100%;
+}
+
 .mainImageDiv {
   height: 100%;
   width: 100%;
-  top: 5px;
-  left: 10px; 
-  position: absolute;
-  animation-duration: 0.6s
+  top: 50%;
+  left: 50%;  
+  position: absolute !important;
+  animation-duration: 1.6s;
+  transform: translate(-50%, -50%); 
 }
 
 .mainImage {
   width: auto; 
   height: auto; 
-  max-height: calc(100% - 10px); 
+  max-height: 100%;
   max-width: 100%;
-  /* position: absolute; */
-  top: 10px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .flexContainerItem {
