--- a/src/css/index.css
+++ b/src/css/index.css
@@ -5,7 +5,9 @@
   --black-09: rgba(255, 255, 255, 0.9);
   --black-05: rgba(255, 255, 255, 0.5);
   --map-bg-color: #E5EFF5;
-  --line: #ebebeb
+  --line: #ebebeb;
+  --thumbsHeight: 70px;
+  --baseSpace: 5px;
 }
 
 html {
@@ -79,7 +81,7 @@ btn-img-fav {
   top: 0%;
   background-size: 40px auto;
   background-color: var(--main-002);
-  height: 100%;
+  height: calc(100% - var(--thumbsHeight) - var(--baseSpace));
   width: 80px;
 }
 
@@ -127,28 +129,8 @@ btn-img-fav {
   align-items: center; 
 }
 
-#divBrowswerTop {
-  height: calc(100% - 80px);
-  max-height: calc(100% - 80px);
-  max-width: 100%;
-}
-
-#photoLoaders {
-  height: calc(100% - 90px);
-  position: "absolute"; 
-  width: 100%;
-  min-height: 200px; 
-  max-width: 100%;
-}
-
-.mainImageDiv {
-  height: 100%;
-  width: 100%;
-  top: 50%;
-  left: 50%;  
-  position: absolute !important;
-  animation-duration: 1.6s;
-  transform: translate(-50%, -50%); 
+.animated {
+  animation-duration: 0.6s;
 }
 
 .mainImage {
@@ -248,17 +230,17 @@ h1, h2, h3, H4, h5, h6 {
 .thumb {
   cursor: pointer;
   width: auto;
-  max-height: 70px !important;
-  padding: 0px 2px 0px 2px !important;
+  max-height: var(--thumbsHeight);
+  padding: 0px 2px 0px 2px;
 }
 .thumbSelected {
   border: 4px solid var(--main);
-  padding: 0px 0px 0px 0px !important;
+  padding: 0px 0px 0px 0px;
 }
 .thumbLoading { 
   width: 105px;
-  max-height: 70px !important;
-  padding: 0px 2px 0px 2px !important;
+  max-height: var(--thumbsHeight);
+  padding: 0px 2px 0px 2px;
 }
 
 .jvectormap-zoomin, .jvectormap-zoomout, .jvectormap-goback {
