--- a/src/css/index.css
+++ b/src/css/index.css
@@ -8,6 +8,8 @@
   --line: #ebebeb;
   --thumbsHeight: 70px;
   --baseSpace: 5px;
+  --navBtnWidth: 80px;
+  --scrollbarWidth: 8px;
 }
 
 html {
@@ -82,7 +84,7 @@ btn-img-fav {
   background-size: 40px auto;
   background-color: var(--main-002);
   height: calc(100% - var(--thumbsHeight) - var(--baseSpace));
-  width: 80px;
+  width: var(--navBtnWidth);
 }
 
 .btn-nav:hover:before {
@@ -101,9 +103,9 @@ btn-img-fav {
 
 .btn-fullscreen:before {
   position: absolute;
-  bottom: 110px;
+  bottom: calc(var(--thumbsHeight) + var(--scrollbarWidth) + var(--baseSpace));
   background-size: 40px auto;
-  right: 100px;
+  right: calc(var(--navBtnWidth) + var(--baseSpace));
   background-image : url(../images/fullscreen.png);
 }
 
@@ -185,7 +187,6 @@ btn-img-fav {
   border-radius: 0;
   background-color: var(--main) !important;
   border-color: var(--main);
- 
 }
 
 .navbar-nav.navbar-center {
@@ -195,15 +196,12 @@ btn-img-fav {
   right: 0;
 }
 
-
 .navbar-nav.navbar-right {
   margin-left: auto;
   margin-right: auto;
   left: 0;
   right: auto;
 }
-
-
 
 .bg-dark {
   background-color: var(--main) !important;
@@ -255,8 +253,8 @@ h1, h2, h3, H4, h5, h6 {
 
 /* set up scrollbars - START */
 ::-webkit-scrollbar {
-  width: 8px;
-  height: 8px;
+  width: var(--scrollbarWidth);
+  height: var(--scrollbarWidth);
 }
 ::-webkit-scrollbar-track {
   box-shadow: inset 0 0 5px var(--line); 
