--- a/src/css/index.css
+++ b/src/css/index.css
@@ -244,7 +244,7 @@ h1, h2, h3, H4, h5, h6 {
 }
 
 .thumbSelected {
-  border: 4px solid var(--main);
+  border: 4px solid var(--main) !important;
   padding: 0px 0px 0px 0px;
 }
 
