--- a/src/css/index.css
+++ b/src/css/index.css
@@ -234,6 +234,7 @@ h1, h2, h3, H4, h5, h6 {
   font-size: 0.7em; 
   color: var(--main);
   background-color: var(--black-05);
+  animation-duration: 0.2s;
 }
 
 /* #endregion */
