--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,3 +1,6 @@
+@import '@fortawesome/fontawesome-free/scss/regular.scss';
+@import '@fortawesome/fontawesome-free/scss/solid.scss';
+
 $main: rgb(0, 102, 153); 
 
 /*FIXME: black is white, gray... chaos */
@@ -139,39 +142,26 @@ h1, h2, h3, H4, h5, h6 {
   border-bottom: 1px solid  $line;
 }
 
-/* #region Favourite photo button */
-.btn-img {
-  background-color: transparent;
-  border: 0px;
-  padding: 0px;
+/* #region Favourite button */
+.fav-button {
+   @extend .far;
+   font-size: 2.5em; 
+   cursor: pointer
 }
 
-.btn-img:before {
-	content: "";
-	width: 40px;
-  height: 40px;
-  margin: 0px;
-  padding: 0px;
-	display: inline-block;
-	vertical-align: text-top;
-	background-position : center center;
-  background-repeat:no-repeat;
+.fav-button:hover {
+  color: red; 
 }
 
-.btn-img-act:before {
-  background-image: url(../images/heart_full.png);
+.fav-button-selected {
+  @extend .fas; 
+  font-size: 2.5em; 
+  color: red;
+  cursor: pointer
 }
 
-.btn-img-inact:before {
-  background-image: url(../images/heart.png);
-}
-
-.btn-img-inact:hover:enabled::before  {
-  background-image: url(../images/heart_hover.png);
-}
-
-.btn-img-act:hover:enabled::before {
-  background-image: url(../images/heart_hover.png);
+.fav-button-selected:hover {
+  @extend .far; 
 }
 
 /* #endregion */
