Looks that it works

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,7 +1,8 @@
 @import '@fortawesome/fontawesome-free/scss/regular.scss';
 @import '@fortawesome/fontawesome-free/scss/solid.scss';
+@import 'bootstrap/scss/bootstrap.scss';
 
-$main: rgb(0, 102, 153); 
+$main: #006699; 
 
 /*FIXME: black is white, gray... chaos */
 $black: white;
@@ -10,12 +11,19 @@ $black-05: rgba($black, 0.5);
 $main-01: rgba($main, 0.1);
 $main-05: rgba($main, 0.5);
 $main-03: rgba($main, 0.3);
-$main-003: rgba($main, 0.04);
+$main-004: rgba($main, 0.04);
 $map-bg-color: #E5EFF5;
 $thumbsHeight: 9vh;
 $baseSpace: 5px;
 $scrollbarWidth: 8px;
 $bigSpace: 0.2em;
+$tagBoring: rgb(80, 80, 80);
+$tagNice: #92EB86;
+$tagTop: #EB4F46;
+$tagInactiveOpactiy: 0.3;
+$tagHoverOpacity: 0.7;
+$tagBtnBorder: 4px;
+$tagNotTagged: $main;
 
 :root {
   --map-bg-color:#E5EFF5;
@@ -37,7 +45,7 @@ body {
   height: 100%;
   color: $main;
   font-weight: 600;
-  background-color: $main-003;
+  background-color: $main-004;
 }
 
 span {
@@ -51,6 +59,7 @@ span {
 .btn {
   border-radius: 0;
   font-weight: 600;
+  text-transform: none;
 }
 
 .alert {
@@ -413,3 +422,66 @@ input:checked + .slider:before {
 }
 
 /* #endregion */
+
+/* #region Photo Tag */
+
+.btn-tag {
+  @extend .btn;
+  font-size: 0.7em;
+  margin-right: 5px;
+  margin-top: 5px;
+  border: 0;
+  outline: none;
+  box-shadow: none !important;
+  border-style: solid;
+}
+.btn-tag.active {
+ border-width: $tagBtnBorder;
+}
+
+.btn-tag.boring {
+  background-color: rgba($tagBoring, $tagInactiveOpactiy) !important;
+}
+.btn-tag.boring:hover, .btn-tag.boring.active:hover {
+  background-color: rgba($tagBoring, $tagHoverOpacity) !important;
+}
+.btn-tag.boring.active {
+  border-color: $tagBtnBorder !important;
+  background-color: $tagBoring !important;
+}
+
+.btn-tag.nice {
+  background-color: rgba($tagNice, $tagInactiveOpactiy) !important;
+}
+.btn-tag.nice:hover, .btn-tag.nice.active:hover {
+  background-color: rgba($tagNice, $tagHoverOpacity) !important;
+}
+.btn-tag.nice.active {
+  border-color: $tagNice !important;
+  background-color: $tagNice !important;
+}
+
+.btn-tag.top {
+  background-color: rgba($tagTop, $tagInactiveOpactiy)  !important;
+}
+.btn-tag.top:hover, .btn-tag.top.active:hover {
+  background-color: rgba($tagTop, $tagHoverOpacity) !important;
+}
+.btn-tag.top.active {
+  border-color: $tagTop !important;
+  background-color: $tagTop !important;;
+}
+
+.btn-tag.notTagged {
+  background-color: rgba($tagNotTagged, $tagInactiveOpactiy)  !important;
+}
+.btn-tag.notTagged:hover, .btn-tag.notTagged.active:hover {
+  background-color: rgba($tagNotTagged, $tagHoverOpacity) !important;
+}
+.btn-tag.notTagged.active {
+  border-color: $tagNotTagged !important;
+  background-color: $tagNotTagged !important;;
+}
+
+
+/* #endregio Photo Tag */
