--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -48,22 +48,21 @@ body {
   background-color: $main-004;
 }
 
-span {
-  margin-left: 8px;
+.form-control, .btn, .alert, .dropdown-menu {
+  border-radius: 0;
 }
 
-.form-control {
-  border-radius: 0;
+p, button {
+  margin-bottom: $baseSpace;
+}
+
+span {
+  margin-left: $baseSpace;
 }
 
 .btn {
-  border-radius: 0;
   font-weight: 600;
   text-transform: none;
-}
-
-.alert {
-  border-radius: 0;
 }
 
 .btn-primary {
@@ -77,7 +76,6 @@ span {
 }
 
 .dropdown-menu {
-  border-radius: 0;
   background-color: $main;
   border-color: $main;
 }
@@ -405,11 +403,11 @@ input:checked + .slider:before {
   @extend .btn;
   font-size: 0.7em;
   margin-right: 5px;
-  margin-top: 5px;
   border: 0;
   outline: none;
   box-shadow: none !important;
   border-style: solid;
+  margin-top: $baseSpace
 }
 .btn-tag.active {
  border-width: $tagBtnBorder;
@@ -422,7 +420,7 @@ input:checked + .slider:before {
   background-color: rgba($tagBoring, $tagHoverOpacity) !important;
 }
 .btn-tag.boring.active {
-  border-color: $tagBtnBorder !important;
+  border-color: $tagBoring !important;
   background-color: $tagBoring !important;
 }
 
@@ -456,8 +454,23 @@ input:checked + .slider:before {
 }
 .btn-tag.notTagged.active {
   border-color: $tagNotTagged !important;
-  background-color: $tagNotTagged !important;;
+  background-color: $tagNotTagged !important;
 }
 
+/* #endregion Photo Tag */
 
-/* #endregio Photo Tag */
+/* #region PhotoFilter */
+
+.tags-filter-menu {
+  opacity: 1;
+  background-color: $main-004;
+  padding: 0;
+}
+
+.tags-filter-btn, .tags-filter-btn:hover, .tags-filter-btn:focus, .tags-filter-btn.dropdown-toggle {
+  background-color: $main-03 !important;
+  box-shadow: none !important;
+  color: $main !important;
+}
+
+/* #endregion */
