--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -295,7 +295,8 @@ h1, h2, h3, H4, h5, h6 {
 }
 
 .thumbSelected {
-  border: 4px solid $main !important;
+  // border: 4px solid $main !important;
+  border-width: 7px !important;
   padding: 0px 0px 0px 0px;
 }
 
@@ -305,7 +306,19 @@ h1, h2, h3, H4, h5, h6 {
 }
 
 .thumbPhoto {
-  border: 1px solid $main-05;
+  border: 1px solid $main;
+}
+
+.thumbPhoto.nice {
+  border: 4px solid $tagNice;
+}
+
+.thumbPhoto.top {
+  border: 4px solid $tagTop;
+}
+
+.thumbPhoto.boring {
+  border: 4px solid $tagBoring;
 }
 
 /* #endregion */
@@ -332,7 +345,7 @@ h1, h2, h3, H4, h5, h6 {
   box-shadow: inset 0 0 5px $main-05; 
 }
 ::-webkit-scrollbar-thumb {
-  background: $main-01; 
+  background: $main; 
 }
 ::-webkit-scrollbar-thumb:hover {
   background: $main; 
