--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,13 +1,5 @@
-// @import '@fortawesome/fontawesome-free/scss/regular.scss';
-// @import '@fortawesome/fontawesome-free/scss/solid.scss';
 @import 'bootstrap/scss/bootstrap.scss';
 
-@font-face {
-  font-family: 'Font Awesome 5 Free';
-  font-weight: 900;
-  src: local('Font Awesome 5 Free');
-  font-display: swap;
-}
 
 $main: #006699; 
 
@@ -42,6 +34,10 @@ html {
 
 #root {
   height: 100%;
+}
+
+::placeholder {
+  color: rgba($main, 0.3) !important;
 }
 
 body {
@@ -303,7 +299,7 @@ h1, h2, h3, H4, h5, h6 {
 
 .thumbSelected {
   // border: 4px solid $main !important;
-  border-width: 7px !important;
+  border-width: 6px !important;
   padding: 0px 0px 0px 0px;
 }
 
