--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -154,6 +154,11 @@ h1, h2, h3, H4, h5, h6 {
   border-bottom: 1px solid  $main-05;
 }
 
+.googleLoginButton button, div {
+  border-radius: 0 !important;
+  box-shadow: none !important;
+}
+
 /* #region Form validation message */
 
 .validationMsg {
