Set browser tab text by selected album

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -130,11 +130,7 @@ h1, h2, h3, H4, h5, h6 {
   position: absolute; 
   width: 100%; 
   height: calc(100% - (#{$baseSpace} * 2)); 
-  margin: $baseSpace;
-}
-
-.photoLoader.sm {
-  margin: 0;
+  margin-top: $baseSpace;
 }
 
 .photoLoadersDiv {
